build: runGame 默认 NanoForge 链启动 + 限定 Java 25 运行时
- launchMode VANILLA→NANOFORGE：RFB Main + NanoForgeBootstrap 前置检查链，
  NanoForge/SSOptimizer coremod 链路生效（VANILLA 直启不加载 NanoForge）
- gradle.properties 固定 starsector.javaVersion=25：SDG resolver 按版本过滤
  候选，避免 ~/.jdks/jbr-17 抢在游戏自带 zulu25 前被选中（BoxUtil 1.6+
  为 Java 25 字节码，JBR 17 加载直接 Fatal）
- 支持手动指定 JDK/JRE：starsector.javaExec / javaHome / javaVersion /
  javaVendor（jbr 为 jetbrains 别名），均有 STARSECTOR_JAVA_* 环境变量等价物；
  SDG resolver 默认顺序调整为游戏自带运行时优先于 ~/.jdks JBR
- 文档同步：launchGame（已不存在）统一改 runGame，04-launch-config 重写为
  SDG 双模式 + 运行时选择规则 + 调试参数说明